Scrollbar issue fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -8,6 +8,10 @@
   @media screen and ($desktopWidth){
     &{      
       height: 100vh;
-    }
+    }    
+  }
+
+  @media ($tabletWidth) {
+    min-height: 100vh;
   }
 }
