--- a/src/Components/Dashboard/dashboard.module.scss
+++ b/src/Components/Dashboard/dashboard.module.scss
@@ -54,6 +54,7 @@
   
   @media ($tabletWidth){
     padding-left: 83px;
+    min-height: 100vh;
   }
 
   @media ($mobileWidth){
